<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fixture.football.football.MainActivity"
    tools:showIn="@layout/activity_main" android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/epl"
        android:paddingTop="10dp"
        android:layout_marginBottom="15dp"
        android:paddingBottom="20dp"
        android:id="@+id/epl" android:onClick="openFixture"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/laliga"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/laliga" android:onClick="openFixture"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bundesliga"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/bundesliga" android:onClick="openFixture"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/euro"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/euro" android:onClick="openFixture"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uefa"
        android:paddingBottom="20dp"
        android:id="@+id/uefa" android:onClick="openFixture"/>

</LinearLayout>